Added the Linked List DS explanation

--- a/DataStructures/linked-lists.ipynb
+++ b/DataStructures/linked-lists.ipynb
@@ -878,6 +878,19 @@
     "- The list of songs in the music player are linked to the previous and next songs.\n",
     "- In a web browser, previous and next web page URLs can be linked through the previous and next buttons (Doubly Linked List)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resources\n",
+    "\n",
+    "- https://www.geeksforgeeks.org/singly-linked-list-tutorial/#deletion-in-singly-linked-list\n",
+    "- https://www.geeksforgeeks.org/doubly-linked-list/\n",
+    "- https://www.geeksforgeeks.org/advantages-and-disadvantages-of-linked-list/?ref=shm\n",
+    "- https://www.geeksforgeeks.org/time-and-space-complexity-of-linked-list/?ref=shm\n",
+    "- https://www.youtube.com/watch?v=qp8u-frRAnU\n"
+   ]
   }
  ],
  "metadata": {
