Added introduction to sorting

--- a/Algorithms/Arrays/sorting.ipynb
+++ b/Algorithms/Arrays/sorting.ipynb
@@ -65,11 +65,11 @@
     "\n",
     "### **Common Algorithms**\n",
     "\n",
+    "- Bubble sort\n",
     "- Selection sort\n",
     "- Insertion sort\n",
-    "- Quick sort\n",
     "- Merge sort\n",
-    "- Bubble sort\n",
+    "- Quick sort\n",
     "- Heap sort\n",
     "- Counting sort\n"
    ]
@@ -96,7 +96,11 @@
     "## **Resources**\n",
     "\n",
     "- https://www.geeksforgeeks.org/sorting-algorithms/\n",
-    "- https://www.geeksforgeeks.org/introduction-to-sorting-algorithm/\n"
+    "- https://www.geeksforgeeks.org/introduction-to-sorting-algorithm/\n",
+    "\n",
+    "### **Vidualization**\n",
+    "\n",
+    "- https://visualgo.net/en\n"
    ]
   }
  ],
