--- a/Algorithms/Arrays/sorting-bubble.ipynb
+++ b/Algorithms/Arrays/sorting-bubble.ipynb
@@ -42,32 +42,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted array is: [11, 12, 22, 25, 34, 64, 90]\n"
+      "No swaps were made, array is already sorted at iteration 2\n",
+      "Sorted array is: [1, 2, 3, 4, 5, 6]\n"
      ]
     }
    ],
    "source": [
     "def bubbleSort(arr):\n",
     "    n = len(arr)\n",
-    "    swapped = False\n",
     "    for i in range(n):\n",
+    "        swapped = False\n",
     "        for j in range(0, n-i-1):\n",
     "            if arr[j] > arr[j+1]:\n",
     "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
     "                swapped = True\n",
     "        if not swapped:\n",
-    "            print(\"No swaps were made, array is already sorted\")\n",
+    "            print(\"No swaps were made, array is already sorted at iteration\", i)\n",
     "            break\n",
     "\n",
     "arr = [64, 34, 25, 12, 22, 11, 90]\n",
     "# arr = [1, 2, 3, 4, 5, 6]\n",
+    "# arr = [1, 2, 6, 5, 3, 4]\n",
     "bubbleSort(arr)\n",
     "print(\"Sorted array is:\", arr)"
    ]
