--- a/Algorithms/Arrays/Sorting/sorting-selection.ipynb
+++ b/Algorithms/Arrays/Sorting/sorting-selection.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,12 +68,14 @@
    "source": [
     "def selectionSort(arr):\n",
     "    n = len(arr)\n",
-    "    for i in range(n):\n",
+    "    for i in range(n-1): # the last element will be in its correct position after n-1 iterations as the rest of the elements will be sorted\n",
     "        min_idx = i\n",
     "        for j in range(i+1, n):\n",
     "            if arr[j] < arr[min_idx]:\n",
     "                min_idx = j\n",
-    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "        \n",
+    "        if min_idx != i: # if the minimum element is not the current element, swap the two\n",
+    "            arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
     "\n",
     "\n",
     "arr = [64, 34, 25, 12, 22, 11, 90]\n",
