Added merge sort

--- a/Algorithms/Arrays/Sorting/merge.ipynb
+++ b/Algorithms/Arrays/Sorting/merge.ipynb
@@ -200,6 +200,17 @@
     "- It can be easily parallelized as we can independently sort subarrays and then merge.\n",
     "- The merge function of merge sort to efficiently solve the problems like union and intersection of two sorted arrays.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Resources**\n",
+    "\n",
+    "- https://www.geeksforgeeks.org/merge-sort/\n",
+    "- https://www.youtube.com/watch?v=gcRUIO-8r3U&list=PLKYEe2WisBTFEr6laH5bR2J19j7sl5O8R&index=15\n",
+    "- https://www.youtube.com/watch?v=nCNfu_zNhyI&list=PLeo1K3hjS3uu_n_a__MI_KktGTLYopZ12&index=17\n"
+   ]
   }
  ],
  "metadata": {
